<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/activityMainLayout"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp"
            android:orientation="vertical"
            android:weightSum="4.2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="2dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_cover">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/background_cover"
                            android:src="@drawable/wash_hands" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:text="@string/wash_hands" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_cover">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp"
                            android:layout_marginStart="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/background_cover"
                            android:src="@drawable/sanitize" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:text="@string/sanitize" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="2dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_cover">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/background_cover"
                            android:src="@drawable/mask" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:text="@string/mask" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_cover">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp"
                            android:layout_marginStart="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/background_cover"
                            android:src="@drawable/home" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:layout_margin="5dp"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:text="@string/stay_home_nsave_lives" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                android:gravity="center"
                android:text="@string/designated_areas_list"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <ListView
                android:id="@+id/designated_area_list_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="2" />

        </LinearLayout>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_designated_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="55dp"
            android:background="@color/colorPrimary"
            android:src="@drawable/designated_location"
            app:fabSize="normal" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation_daily_drivers"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:background="@color/white"
            app:labelVisibilityMode="labeled"
            app:menu="@menu/home_menu" />

    </RelativeLayout>
</layout>